[gd_scene load_steps=3 format=3 uid="uid://baqbjml8ahgng"]

[ext_resource type="Script" uid="uid://cfmtk5lhwecto" path="res://addons/agent/ui/main_panel.gd" id="1_c4fjy"]
[ext_resource type="Script" uid="uid://dlx7bujvsuk11" path="res://addons/agent/scripts/deepseek_chat_stream.gd" id="1_fhbwo"]

[node name="Agent" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c4fjy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChatContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MessageList" type="VBoxContainer" parent="VBoxContainer/ChatContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="InputContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="UserInput" type="TextEdit" parent="VBoxContainer/MarginContainer/InputContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/InputContainer"]
layout_mode = 2
alignment = 2

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/MarginContainer/InputContainer/HBoxContainer"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Ask"
popup/item_0/id = 0
popup/item_1/text = "Agent"
popup/item_1/id = 1

[node name="SendButton" type="Button" parent="VBoxContainer/MarginContainer/InputContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "发送"

[node name="DeepSeekChatStream" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_fhbwo")
secret_key = "sk-208101f6f9fd42bbbd0cb45cd064b91a"
use_thinking = true
max_tokens = 65536
metadata/_custom_type_script = "uid://dlx7bujvsuk11"
